--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,215 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
+kvstore/__pycache__/
+kvstore/*.py[codz]
+kvstore/*$py.class
 
 # C extensions
-*.so
+kvstore/*.so
 
 # Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+kvstore/.Python
+kvstore/build/
+kvstore/develop-eggs/
+kvstore/dist/
+kvstore/downloads/
+kvstore/eggs/
+kvstore/.eggs/
+kvstore/lib/
+kvstore/lib64/
+kvstore/parts/
+kvstore/sdist/
+kvstore/var/
+kvstore/wheels/
+kvstore/share/python-wheels/
+kvstore/*.egg-info/
+kvstore/.installed.cfg
+kvstore/*.egg
+kvstore/MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+kvstore/*.manifest
+kvstore/*.spec
 
 # Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+kvstore/pip-log.txt
+kvstore/pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
+kvstore/htmlcov/
+kvstore/.tox/
+kvstore/.nox/
+kvstore/.coverage
+kvstore/.coverage.*
+kvstore/.cache
+kvstore/nosetests.xml
+kvstore/coverage.xml
+kvstore/*.cover
+kvstore/*.py.cover
+kvstore/.hypothesis/
+kvstore/.pytest_cache/
+kvstore/cover/
 
 # Translations
-*.mo
-*.pot
+kvstore/*.mo
+kvstore/*.pot
 
 # Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+kvstore/*.log
+kvstore/local_settings.py
+kvstore/db.sqlite3
+kvstore/db.sqlite3-journal
 
 # Flask stuff:
-instance/
-.webassets-cache
+kvstore/instance/
+kvstore/.webassets-cache
 
 # Scrapy stuff:
-.scrapy
+kvstore/.scrapy
 
 # Sphinx documentation
-docs/_build/
+kvstore/docs/_build/
 
 # PyBuilder
-.pybuilder/
-target/
+kvstore/.pybuilder/
+kvstore/target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+kvstore/.ipynb_checkpoints
 
 # IPython
-profile_default/
-ipython_config.py
+kvstore/profile_default/
+kvstore/ipython_config.py
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# kvstore/.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
-#Pipfile.lock
+#kvstore/Pipfile.lock
 
 # UV
 #   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
-#uv.lock
+#kvstore/uv.lock
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
+#kvstore/poetry.lock
+#kvstore/poetry.toml
 
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
 #   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
 #   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
+#kvstore/pdm.lock
+#kvstore/pdm.toml
+kvstore/.pdm-python
+kvstore/.pdm-build/
 
 # pixi
 #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
+#kvstore/pixi.lock
 #   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
 #   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
+kvstore/.pixi
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+kvstore/__pypackages__/
 
 # Celery stuff
-celerybeat-schedule
-celerybeat.pid
+kvstore/celerybeat-schedule
+kvstore/celerybeat.pid
 
 # SageMath parsed files
-*.sage.py
+kvstore/*.sage.py
 
 # Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+kvstore/.env
+kvstore/.envrc
+kvstore/.venv
+kvstore/env/
+kvstore/venv/
+kvstore/ENV/
+kvstore/env.bak/
+kvstore/venv.bak/
 
 # Spyder project settings
-.spyderproject
-.spyproject
+kvstore/.spyderproject
+kvstore/.spyproject
 
 # Rope project settings
-.ropeproject
+kvstore/.ropeproject
 
 # mkdocs documentation
-/site
+kvstore/site
 
 # mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+kvstore/.mypy_cache/
+kvstore/.dmypy.json
+kvstore/dmypy.json
 
 # Pyre type checker
-.pyre/
+kvstore/.pyre/
 
 # pytype static type analyzer
-.pytype/
+kvstore/.pytype/
 
 # Cython debug symbols
-cython_debug/
+kvstore/cython_debug/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+#kvstore/.idea/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
 # Ignore directories containing user credentials, local state, and settings.
 # Learn more at https://abstra.io/docs
-.abstra/
+kvstore/.abstra/
 
 # Visual Studio Code
 #  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+# kvstore/.vscode/
 
 # Ruff stuff:
-.ruff_cache/
+kvstore/.ruff_cache/
 
 # PyPI configuration file
-.pypirc
+kvstore/.pypirc
 
 # Cursor
 #  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+kvstore/.cursorignore
+kvstore/.cursorindexingignore
 
 # Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+kvstore/marimo/_static/
+kvstore/marimo/_lsp/
+kvstore/__marimo__/
+
+# KV Store specific generated files
+kvstore/data/
+kvstore/benchmark_data/
+kvstore/benchmark_acid_data/
+kvstore/cluster_data/
+kvstore/demo_data/
+kvstore/durability_bench_data/
